--- a/index.html
+++ b/index.html
@@ -82,23 +82,39 @@
         <div class="projects-grid">
             <div class="project">
                 <!-- <img src="project1.jpg" alt="Project 1"> -->
-                <h3>Age Calculator</h3>
-                <p>A user-friendly web application that calculates age based on a given birthdate. It provides precise age in years, months, and days, accounting for leap years and varying month lengths. Built with HTML, CSS, and JavaScript, it’s perfect for quickly determining age for personal or eligibility purposes.</p>
+                <h3>Calculator</h3>
+                <p>A user-friendly web application that calculates age based on a given operation. It provides precise  calculation, accounting for leap years and varying month lengths. Built with HTML, CSS, and JavaScript, it’s perfect for quickly determining age for personal or eligibility purposes.</p>
+                <a href="https://vishal579686.github.io/Calculator/" class="btn">Click me</a>
+                <a href="https://github.com/Vishal579686/Calculator" class="btn">See code</a>
+            </div>
+            <div class="project">
+                <h3>Electricity Billing System</h3>
+                <p>An electricity billing system is a software solution that automates the process of calculating and generating electricity bills. It tracks electricity consumption, applies the correct rates, and produces accurate bills. The system helps utility providers manage customer accounts, streamline billing processes, and ensure timely payments.</p>
+                <a href="https://github.com/Vishal579686/Electricity-billing-system" class="btn">See code</a>
             </div>
             <div class="project">
                 <!-- <img src="project2.jpg" alt="Project 2"> -->
-                <h3>Bank Management System</h3>
-                <p>A robust Java-based application designed for managing banking operations. It allows users to perform transactions such as deposits, withdrawals, and balance checks. Features include account creation, transaction history, and account management with secure data handling. Developed using Java, it utilizes object-oriented principles and file handling for persistent data storage.</p>
+                <h3>Employee Management System</h3>
+                <p>An Employee Management System (EMS) is a software tool that helps manage employee data, track attendance, process payroll, and handle HR tasks like leave management and performance reviews. It streamlines HR operations, improves data accuracy, and enhances organizational efficiency.</p>
+                <a href="https://github.com/Vishal579686/Employee-Management-Sytem" class="btn">See code</a>
+            </div>
+            <div class="project">
+                <!-- <img src="project2.jpg" alt="Project 2"> -->
+                <h3>Chatting Application</h3>
+                <p>A chatting application is a software platform that enables real-time communication between users through text messages, voice, or video. It typically includes features like user authentication, contact management, message history, notifications, and file sharing. The application aims to facilitate instant and seamless communication across various devices.</p>
+                <a href="https://github.com/Vishal579686/Chatting-Application" class="btn">See code</a>
+            </div>
+            <div class="project">
+                <!-- <img src="project2.jpg" alt="Project 2"> -->
+                <h3>Quiz Application</h3>
+                <p>
+                    A quiz application is a software tool that allows users to create, take, and manage quizzes on various topics. It typically includes features like multiple question types, timed quizzes, score tracking, and result analysis. The application is designed for educational purposes, testing knowledge, or entertainment, providing an interactive and engaging experience for users.</p>
+                <a href="https://github.com/Vishal579686/Quiz-Application" class="btn">See code</a>
             </div>
             <div class="project">
                 <!-- <img src="project2.jpg" alt="Project 2"> -->
                 <h3>Weather App</h3>
                 <p>A dynamic web application that provides real-time weather updates based on user location or input city. Users can view current conditions, temperature, and forecasts with a sleek, intuitive interface. Developed using HTML, CSS, and JavaScript, and powered by a weather API, it offers accurate and up-to-date weather information for any location.</p>
-            </div>
-            <div class="project">
-                <!-- <img src="project2.jpg" alt="Project 2"> -->
-                <h3>Hospital Management System</h3>
-                <p>A comprehensive Java-based application designed to streamline hospital operations. It manages patient records, doctor appointments, and medical billing efficiently. Key features include patient registration, appointment scheduling, and treatment history management. Built using Java, it leverages object-oriented principles and data persistence to enhance hospital administration and patient care.</p>
             </div>
             <div class="project">
                 <!-- <img src="project2.jpg" alt="Project 2"> -->
