--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h2>Welcome to My Portfolio</h2>
             <h1>Hi, My name is Vishal Singh</h1>
             <p>CSE final year student | Web Developer | Java | DSA in Java | MySQL | B.Tech, BBDU | Computer Science & Engineering</p>
-            <a href="./Resume.pdf" class="btn">Resume</a>
+            <a href="./Vishal BBD.pdf" class="btn">Resume</a>
             <a href="https://github.com/assistantsir2555" class="btn">Github</a>
             <a href="mailto:your.vishal252004singh@gmail.com" class="btn">Hire Me</a>
         </div>
